# locallibrary

./: .gitignore  README.md  pyproject.toml  requirements.txt
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_language_and_more.py  0003_bookinstance_borrower.py  0004_alter_bookinstance_options.py
catalog/templates/: base_generic.html  index.html
catalog/templates/catalog/: author_confirm_delete.html  author_detail.html  author_list.html  book_confirm_delete.html  book_detail.html  book_renew_librarian.html  bookinstance_list_borrowed_librarian.html  bookinstance_list_borrowed_user.html
locallibrary/: settings.py  urls.py
