[tool.poetry]
name = "locallibrary"
version = "0.1.0"
description = ""
authors = ["Marc Altmann <marc.altmann@cedis.fu-berlin.de>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.6"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
